--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5",
         "milon/barcode": "^6.0",
-        "nesbot/carbon": "^2.66"
+        "nesbot/carbon": "^2.66",
+        "vinkla/hashids": "^7.0"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
